Fixed blog page alignment, format document

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -608,6 +608,10 @@ blockquote {
   font-weight: lighter;
   color: black;
 }
+.features-blog h2 a {
+  font-weight: lighter;
+  color: black;
+}
 
 .features .more a {
   padding: 24px 0;
